package org.teamtree.objectaid.Entite;

public class Enum implements Entite{
    @Override
    public String getEntite() {
        return "enum";
    }
}
