package org.teamtree.objectaid.Entite;

public class Record implements Entite{
    @Override
    public String getEntite() {
        return "record";
    }
}
