package org.teamtree.objectaid;

public interface Etat {
    public String getEtat();
}
