package org.teamtree.objectaid.Etat;

public class Abstract implements Etat{
    @Override
    public String getEtat(){
        return "abstract";
    }
}
