package org.teamtree.objectaid.Etat;

public class Final implements Etat{
    @Override
    public String getEtat() {
        return "final";
    }
}
