package org.teamtree.objectaid.Etat;

public class Static implements Etat{
    @Override
    public String getEtat() {
        return "static";
    }
}
