package org.teamtree.objectaid.MVC.Vue;

public interface Observateur {
    void actualiser();
}
