package org.teamtree.objectaid;

public class Protected implements Accessibilite {
    @Override
    public String getAcces() {
        return "#";
    }
}
