package org.teamtree.objectaid;

public class Public implements Accessibilite {
    @Override
    public String getAcces() {
        return "+";
    }
}
